--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,9 @@
 ---
-const pageTitle = "Home Page"
+import '../styles/global.css';
+
+const pageTitle = "Home Page";
+
+const titleColor = "mediumpurple";
 ---
 
 <html lang="en">
@@ -9,6 +13,9 @@ const pageTitle = "Home Page"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<style define:vars={{titleColor}}>
+			h1 {color: var(--titleColor)};
+		</style>
 	</head>
 	<body>
 		<a href="/">Home</a>
