Added components for header, footer, navigation, and socials

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/header.astro';
+import Footer from '../components/footer.astro';
 import '../styles/global.css';
 
 const pageTitle = "Home Page";
@@ -18,10 +20,14 @@ const titleColor = "mediumpurple";
 		</style>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Header />
 
 		<h1>{pageTitle}</h1>
+
+		<Footer />
+
+		<script>
+			import "../scripts/menu.js"
+		</script>
 	</body>
 </html>
