--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '../components/footer.astro';
+import Header from '../components/header.astro';
 import '../styles/global.css';
 
 const pageTitle = "My Astro Learning Blog";
@@ -13,9 +15,7 @@ const pageTitle = "My Astro Learning Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+		<Header />
 		
 		<h1>{pageTitle}</h1>
 
@@ -25,5 +25,10 @@ const pageTitle = "My Astro Learning Blog";
             <li><a href="/posts/post-2">Post 2</a></li>
             <li><a href="/posts/post-3">Post 3</a></li>
         </ul>
+
+		<Footer />
+		<script>
+			import "../scripts/menu.js"
+		</script>
 	</body>
 </html>
