--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,33 +1,10 @@
 ---
-import Header from '../components/header.astro';
-import Footer from '../components/footer.astro';
-import '../styles/global.css';
-
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Home Page";
-
-const titleColor = "mediumpurple";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style define:vars={{titleColor}}>
-			h1 {color: var(--titleColor)};
-		</style>
-	</head>
-	<body>
-		<Header />
-
-		<h1>{pageTitle}</h1>
-
-		<Footer />
-
-		<script>
-			import "../scripts/menu.js"
-		</script>
-	</body>
-</html>
+<BaseLayout pageTitle = {pageTitle}>
+	<style is:global>
+		h1 {color: mediumpurple;}
+	</style>
+	<h2>My awesome blog subtitle</h2>
+</BaseLayout>
